# serverless-core

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  fly.toml  pnpm-lock.yaml  pyproject.toml
.github/workflows/: build-agent.yml  build-model-images.yml
apps/agent/: pyproject.toml
apps/agent/src/agent/: main.py
apps/api/: Dockerfile  pyproject.toml
apps/api/src/serverless_core_api/: anthropic_client.py  config.py  deps.py  main.py  vast.py
apps/api/src/serverless_core_api/models/: offer.py
apps/api/src/serverless_core_api/routers/: admin.py  health.py  internal.py  proxy.py
apps/api/src/serverless_core_api/services/: dataset_poller.py  idle_pauser.py  offer_picker.py  pipeline_exec.py  rental.py  replicator.py  routing.py  status_poller.py
apps/web/: .dockerignore  .gitignore  Dockerfile  fly.toml  middleware.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/datasets/: page.tsx
apps/web/src/app/instances/: page.tsx
apps/web/src/app/keys/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/logs/: page.tsx
apps/web/src/app/models/: page.tsx
apps/web/src/components/: app-shell.tsx  nav.tsx  sidebar.tsx  status-badge.tsx
apps/web/src/lib/: api.ts  time.ts
cli/: pyproject.toml
cli/src/sc/: __main__.py  app.py  config.py
cli/src/sc/commands/: instance.py  key.py  offers.py
dev-scripts/: get-jwt.py
docker/vllm-agent/: Dockerfile  Dockerfile.baked  entrypoint.sh
docs/: ARCHITECTURE.md  BAKED_IMAGES.md  DATASETS.md  RENTAL_POLICIES.md
supabase/: config.toml  seed.sql
supabase/migrations/: 20260422000000_init.sql  20260423130000_add_stage_msg.sql  20260423135000_bad_machines.sql  20260423140000_api_keys.sql  20260423180000_instance_vllm_api_key.sql  20260423220000_scale_to_zero.sql  20260423230000_request_logs.sql  20260424000000_api_key_rate_limit.sql  20260424010000_pipelines.sql  20260424020000_api_key_scopes.sql  20260424030000_pipelines_v2.sql  20260424040000_pipeline_steps_chain.sql  20260424050000_pipelines_model_slug_nullable.sql  20260424100000_rental_policy.sql  20260424200000_bad_cpus.sql  20260424210000_datasets.sql  20260425020000_eval_datasets.sql  20260502000000_model_lora_disk.sql
(+8 files in other folders)
