[project]
name = "serverless-core-workspace"
version = "0.0.0"
description = "serverless-core monorepo root (not published)"
requires-python = ">=3.12,<3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/api", "cli"]

# Register workspace packages so cross-package imports resolve locally.
[tool.uv.sources]
serverless-core-api = { workspace = true }
serverless-core-cli = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
