[project]
name = "serverless-core-cli"
version = "0.1.0"
description = "serverless-core command-line client"
requires-python = ">=3.12,<3.14"
dependencies = [
  "typer>=0.15",
  "httpx>=0.28",
  "rich>=13.9",
  "tomli-w>=1.1",
]

[project.scripts]
# `sc` on Windows shadows the built-in Service Control binary, so we expose
# the CLI as `scx` instead. The Python package itself is still named `sc`.
scx = "sc.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sc"]
